--- a/.github/workflows/test-cases.yml
+++ b/.github/workflows/test-cases.yml
@@ -148,7 +148,7 @@
 - summary: |
     Проверка добавления товаров в корзину
   requirement: |
-    Позле добавления товаров в корзину они должны появиться в ней
+    После добавления товаров в корзину они должны появиться в ней
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   steps:
@@ -173,7 +173,7 @@
 - summary: |
     Проверка добавления дополнительных товаров в корзину
   requirement: |
-    Позле добавления товаров в корзину они должны появиться в ней
+    После добавления товаров в корзину они должны появиться в ней
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   steps:
@@ -245,7 +245,7 @@
     - Нажать кнопку: оформить заказ
     - Ввести номер телефона
     - Нажать кнопку: перейти к оплате
-    - Ввести данные Банковской карты
+    - Ввести данные банковской карты
   expected-result: |
     Сообщение: заказ успешно оплачен   
   
@@ -328,7 +328,7 @@
 - summary: |
     Проверка способности сайта работать при высоком трафике (100 пользователей одновременно)
   requirement: |
-    Сайт должен оставвать доступным и быстро работать
+    Сайт должен оставать доступным и быстро работать
   prerequisites: |
     Зарегистрироваться в сервисе https://loaddy.com/
   steps:
