fix bugreports and test-cases

--- a/.github/workflows/bugreports.yml
+++ b/.github/workflows/bugreports.yml
@@ -14,15 +14,28 @@
     Интерфейс сайта переключился на русский, названия производителей остались прежними, описания товаров в карточках остались английскими
     
 - summary: |
+    Картинки в карточках товаров не подогнаны по размеру и не кликабельны
+  environment: |
+    Google Chrome 123.0.6312.123 (Официальная сборка), (64 бит)
+    Windows 10 Pro 64-разрядная операционная система
+  steps-to-reproduce: |
+    1. Открыть главную страницу https://hexlet-products-store.vercel.app/
+    2. Открыть несколько товаров со страницы выдачи, из середины и с последней страницы выдачи
+  expected-result: |
+    В карточке отображается название, рейтинг, описание, цена со скидкой и без нее, все категории заполнены, все картинки одинакового размера и их можно увеличить
+  actual-result: |
+    В карточке отображается название, рейтинг, описание, цена со скидкой и без нее, все категории заполнены, картинки разного размера и их нельзя увеличить
+    
+- summary: |
     Не работает поиск по ключевым словам на русском языке
   environment: |
     Google Chrome 123.0.6312.123 (Официальная сборка), (64 бит)
     Windows 10 Pro 64-разрядная операционная система
   steps-to-reproduce: |
     1. Открыть главную страницу https://hexlet-products-store.vercel.app/
-    2. Ввести в строке поиска ключевое слово парфюмерия
+    2. Ввести в строке поиска ключевое слово «парфюмерия»
   expected-result: |
-    Отображаются товары со словом парфюмерия в названии
+    Отображаются товары со словом «парфюмерия» в названии
   actual-result: |
     Ничего не найдено  
     
@@ -40,13 +53,13 @@
     В выпадающем списке видны только категории товаров, которые показаны на текущей странице
 
 - summary: |
-    Не правильно работает поиск по производителям
+    Неправильно работает поиск по производителям
   environment: |
     Google Chrome 123.0.6312.123 (Официальная сборка), (64 бит)
     Windows 10 Pro 64-разрядная операционная система
   steps-to-reproduce: |
     1. Открыть главную страницу https://hexlet-products-store.vercel.app/
-    2. Поставить галочку напритив производителей Apple, Soft Cotton, YIOSI
+    2. Поставить галочку напротив производителей Apple, Soft Cotton, YIOSI
   expected-result: |
     В списке отобразились все товары этих производителей
   actual-result: |
@@ -74,15 +87,15 @@
   steps-to-reproduce: |
     1. Открыть главную страницу https://hexlet-products-store.vercel.app/ в двух разных вкладках
     2. Добавить один товар в корзину в первой вкладке
-    3. Добавить один товар в корзину во второй акладке
-    4. Перейти в корзину во второй акладке
+    3. Добавить один товар в корзину во второй вкладке
+    4. Перейти в корзину во второй вкладке
   expected-result: |
     В корзине лежат оба товара
   actual-result: |
     В корзине лежит только товар из второй вкладки
     
 - summary: |
-    У пользователя нет возвомжно оставить контактные данные при оформлении заказа
+    У пользователя нет возможности оставить контактные данные при оформлении заказа
   environment: |
     Google Chrome 123.0.6312.123 (Официальная сборка), (64 бит)
     Windows 10 Pro 64-разрядная операционная система
@@ -91,7 +104,7 @@
     2. Перейти в корзину https://hexlet-products-store.vercel.app/cart
     3. Нажать кнопку "Оформить заказ"
   expected-result: |
-    Появится всплывающее окно с формой, в кторой пользователь может оставить свои контактные данные
+    Появится всплывающее окно с формой, в которой пользователь может оставить свои контактные данные
   actual-result: |
     Формы для контактных данных нет
     
@@ -105,7 +118,7 @@
     2. Перейти в корзину https://hexlet-products-store.vercel.app/cart
     3. Нажать кнопку "Оформить заказ"
   expected-result: |
-    Появится всплывающее окно с формой, в кторой пользователь может оставить свои контактные данные, после чего произойдет автоматический переход к оплате
+    Появится всплывающее окно с формой, в которой пользователь может оставить свои контактные данные, после чего произойдет автоматический переход к оплате
   actual-result: |
     Формы для контактных данных нет
     Формы для оплаты нет
@@ -133,10 +146,10 @@
     Windows 10 Pro 64-разрядная операционная система
   steps-to-reproduce: |
     1. Открыть главную страницу https://hexlet-products-store.vercel.app/ 
-    ажать F12, чтобы открыть инструменты разработчика
-    2. Нажать кнопку Toggle device toolbar
-    3. Выбрать имитацию устройства с разрешением экрана 375x667
-    4. Проверить элементы верстки
+    2. Нажать F12, чтобы открыть инструменты разработчика
+    3. Нажать кнопку Toggle device toolbar
+    4. Выбрать имитацию устройства с разрешением экрана 375x667
+    5. Проверить элементы верстки
   expected-result: |
     Все элементы отображаются правильно и не наползают друг на друга, шрифты читаемы, изображения не растягиваются по горизонтали или вертикали
   actual-result: |
