--- a/.github/workflows/test-cases.yml
+++ b/.github/workflows/test-cases.yml
@@ -27,18 +27,18 @@
 - summary: |
     Проверка карточек товаров
   requirement: |
-    В карточках отображается вся информация о товаре: название, рейтинг, описание, цена со скидкой и без нее
+    В карточках отображается вся информация о товаре: название, рейтинг, описание, цена со скидкой и без нее, все картинки одинакового размера и их можно увеличить
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   steps:
-    - открыть несколько товаров с страницы выжачи, из середины и с последней страницы выдачи
+    - открыть несколько товаров со страницы выдачи, из середины и с последней страницы выдачи
   expected-result: |
-    В карточке отображается название, рейтинг, описание, цена со скидкой и без нее, все категории заполнены
+    В карточке отображается название, рейтинг, описание, цена со скидкой и без нее, все категории заполнены, все картинки одинакового размера и их можно увеличить
     
 - summary: |
     Проверка поиска по ключевым словам на английском языке
   requirement: |
-    При введение ключевого слова найдутся все товары, содержащие его в названии
+    При введении ключевого слова найдутся все товары, содержащие его в названии
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
@@ -51,33 +51,33 @@
 - summary: |
     Проверка поиска по ключевым словам на русском языке
   requirement: |
-    При введение ключевого слова найдутся все товары, содержащие его в названии
+    При введении ключевого слова найдутся все товары, содержащие его в названии
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
-    Ключевое слово парфюмерия
+    Ключевое слово «парфюмерия»
   steps:
-    - Ввести ключевое слово парфюмерия в форме поиска
+    - Ввести ключевое слово «парфюмерия» в форме поиска
   expected-result: |
-    Отображаются товары со словом парфюмерия в названии
+    Отображаются товары со словом «парфюмерия» в названии
     
 - summary: |
     Проверка поиска по ключевым словам с перепутанной раскладкой
   requirement: |
-    При введение неправильного ключевого слова ничего не найдётся
+    При введении неправильного ключевого слова ничего не найдётся
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
-    Ключевое слово зукагьу 
+    Ключевое слово «зукагьу» 
   steps:
-    - Ввести ключевое слово зукагьу в форме поиска
+    - Ввести ключевое слово «зукагьу» в форме поиска
   expected-result: |
     Ничего не найдено
     
 - summary: |
     Проверка поиска по ключевым словам с HTML-кодом
   requirement: |
-    При введение HTML-кода ничего не найдётся
+    При введении HTML-кода ничего не найдётся
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
@@ -105,14 +105,14 @@
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   steps:
-    - Поставить галочку напритив производителей Apple, Soft Cotton, YIOSI
+    - Поставить галочку напротив производителей Apple, Soft Cotton, YIOSI
   expected-result: |
     В списке отобразились все товары этих производителей
     
 - summary: |
     Проверка работы поиска по категории, бренду, цене и наличию
   requirement: |
-    При применении фильтров находятся все товары, которые которые подходят под эти фильтры
+    При применении фильтров находятся все товары, которые подходят под эти фильтры
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   steps:
@@ -121,12 +121,12 @@
     - Поставить галочку in_stock
     - Ввести минимальную цену 1 и максимальную в пределах цены товаров из выдачи
   expected-result: |
-    Выдача обновялется по мере применения фильтров. Результат выдачи соответствует фильтрам.
+    Выдача обновляется по мере применения фильтров. Результат выдачи соответствует фильтрам.
     
 - summary: |
-    Проверка работы поиска по соответсвию категории и бренда
+    Проверка работы поиска по соответствию категории и бренда
   requirement: |
-    При выборе категории в фильтре Производителей должны остаться только те бренды которые ей соответсвуют
+    При выборе категории в фильтре производителей должны остаться только те бренды которые ей соответствуют
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   steps:
@@ -143,7 +143,7 @@
   steps:
     - снять галочку с фильтра in_stock
   expected-result: |
-    Отобразились товары, которых нет в налии (если таких товаров нет, отобразилась пустая страница)    
+    Отобразились товары, которых нет в наличии (если таких товаров нет, отобразилась пустая страница)    
     
 - summary: |
     Проверка добавления товаров в корзину
@@ -214,7 +214,7 @@
   prerequisites: |
     Открыта корзина https://hexlet-products-store.vercel.app/cart, в которую нет товаров
   steps:
-    - Проверить наличие кнопки: офомить заказ
+    - Проверить наличие кнопки: оформить заказ
   expected-result: |
     кнопки нет
 
@@ -276,7 +276,7 @@
     - Открыть карточку товара
     - Нажать кнопку: добавить в корзину
     - Перейти в корзину
-    - Нажать кнопку: офирмить заказ 
+    - Нажать кнопку: оформить заказ 
   expected-result: |
     Все элементы отображаются правильно и не наползают друг на друга, шрифты читаемы, изображения не растягиваются по горизонтали или вертикали, пользователь может оформить заказ
     
@@ -294,7 +294,7 @@
     - Открыть карточку товара
     - Нажать кнопку: добавить в корзину
     - Перейти в корзину
-    - Нажать кнопку: офирмить заказ 
+    - Нажать кнопку: оформить заказ 
   expected-result: |
     Все элементы отображаются правильно и не наползают друг на друга, шрифты читаемы, изображения не растягиваются по горизонтали или вертикали, пользователь может оформить заказ
 
@@ -323,12 +323,12 @@
     - Открыть вкладку lighhouse
     - Нажать кнопку: analize page load
   expected-result: |
-    Параметры Performance, Best Practices и SEO находятся на высоком уровне, в зелёном диапазоне диаграмы
+    Параметры Performance, Best Practices и SEO находятся на высоком уровне, в зелёном диапазоне диаграммы
     
 - summary: |
     Проверка способности сайта работать при высоком трафике (100 пользователей одновременно)
   requirement: |
-    Сайт должен оставать доступным и быстро работать
+    Сайт должен оставаться доступным и быстро работать
   prerequisites: |
     Зарегистрироваться в сервисе https://loaddy.com/
   steps:
