--- a/.github/workflows/testing-report.yml
+++ b/.github/workflows/testing-report.yml
@@ -9,7 +9,7 @@
   
 - summary: |
     Проверка карточек товаров
-  status: pass
+  status: fail
   
 - summary: |
     Проверка поиска по ключевым словам на английском языке
@@ -40,7 +40,7 @@
   status: pass
   
 - summary: |
-    Проверка работы поиска по соответсвию категории и бренда
+    Проверка работы поиска по соответсnвию категории и бренда
   status: fail
   
 - summary: |
