fix files and add regress-report

--- a/.github/workflows/bugreports.yml
+++ b/.github/workflows/bugreports.yml
@@ -6,12 +6,12 @@
     Windows 10 Pro 64-разрядная операционная система
   steps-to-reproduce: |
     1. Открыть главную страницу https://hexlet-products-store.vercel.app/
-    2. Нажать на выпадаюзщий список с надписью Language
+    2. Нажать на выпадающий список с надписью Language
     3. Выбрать Russian
   expected-result: |
-    Интерфейс сайта и описания товаров переключились на русский, названия производителей остались прежними
+    Интерфейс сайта и описания товаров переключились на русский, названия производителей остались прежними, иконка поменялась с британского флага на российский
   actual-result: |
-    Интерфейс сайта переключился на русский, названия производителей остались прежними, описания товаров в карточках остались английскими
+    Интерфейс сайта переключился на русский, названия производителей остались прежними, описания товаров в карточках остались английскими, иконка с британским флагом не отображается
     
 - summary: |
     Картинки в карточках товаров не подогнаны по размеру и не кликабельны
@@ -22,9 +22,22 @@
     1. Открыть главную страницу https://hexlet-products-store.vercel.app/
     2. Открыть несколько товаров со страницы выдачи, из середины и с последней страницы выдачи
   expected-result: |
-    В карточке отображается название, рейтинг, описание, цена со скидкой и без нее, все категории заполнены, все картинки одинакового размера и их можно увеличить
+    В карточке отображается название, рейтинг, описание, цена со скидкой и без нее, все категории заполнены, все картинки подогнаны по размеру, и их можно увеличить
   actual-result: |
-    В карточке отображается название, рейтинг, описание, цена со скидкой и без нее, все категории заполнены, картинки разного размера и их нельзя увеличить
+    В карточке отображается название, рейтинг, описание, цена со скидкой и без нее, все категории заполнены, картинки не подогнаны по размеру, и их нельзя увеличить
+    
+- summary: |
+    На первой странице не исчезает кнопка «Предыдущая», а на последней «Следующая»
+  environment: |
+    Google Chrome 123.0.6312.123 (Официальная сборка), (64 бит)
+    Windows 10 Pro 64-разрядная операционная система
+  steps-to-reproduce: |
+    1. Открыть главную страницу https://hexlet-products-store.vercel.app/
+    2. Открыть последнюю страницу каталога
+  expected-result: |
+    На первой странице отображается только кнопка «Следующая», на последней — только кнопка «Предыдущая»
+  actual-result: |
+    На первой и на последней страницах отображаются кнопки «Предыдущая» и «Следующая»
     
 - summary: |
     Не работает поиск по ключевым словам на русском языке
@@ -50,7 +63,7 @@
   expected-result: |
     Появляется выпадающий список со всеми категориями товаров, которые представлены на сайте
   actual-result: |
-    В выпадающем списке видны только категории товаров, которые показаны на текущей странице
+    В выпадающем списке видны только категории товаров, которые показаны на текущей странице, пустой строки для сброса нет
 
 - summary: |
     Неправильно работает поиск по производителям
