--- a/.github/workflows/test-cases.yml
+++ b/.github/workflows/test-cases.yml
@@ -2,14 +2,14 @@
 - summary: |
     Проверка переключения языка с английского на русский
   requirement: |
-    При переключенинии языка интерфейс сайта и описание категорий должены поменяться на русский, названия производителей меняться не должны
+    При переключенинии языка интерфейс сайта и описание категорий должены поменяться на русский, названия производителей меняться не должны, также меняется иконка флага 
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   steps:
     - Нажать на выпадаюзщий список с надписью Language
     - Выбрать Russian
   expected-result: |
-    Интерфейс сайта и описания товаров переключились на русский, названия производителей остались прежними
+    Интерфейс сайта и описания товаров переключились на русский, иконка поменялась с британского флага на российский, названия производителей остались прежними
     
 - summary: |
     Проверка безопасности сайта
@@ -27,13 +27,25 @@
 - summary: |
     Проверка карточек товаров
   requirement: |
-    В карточках отображается вся информация о товаре: название, рейтинг, описание, цена со скидкой и без нее, все картинки одинакового размера и их можно увеличить
+    В карточках отображается вся информация о товаре: название, рейтинг, описание, цена со скидкой и без нее, все картинки подогнаны по размеру и их можно увеличить
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   steps:
     - открыть несколько товаров со страницы выдачи, из середины и с последней страницы выдачи
   expected-result: |
-    В карточке отображается название, рейтинг, описание, цена со скидкой и без нее, все категории заполнены, все картинки одинакового размера и их можно увеличить
+    В карточке отображается название, рейтинг, описание, цена со скидкой и без нее, все категории заполнены, все картинки подогнаны по размеру и их можно увеличить
+    
+- summary: |
+    Проверка пагинации
+  requirement: |
+    Страницы с товарами можно листать кнопками «Предыдущая» и «Следующая»
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  steps:
+    - Нажимать кнопку «Следующая», до тех пор, пока не откроется последняя страница
+    - Нажимать кнопку «Предыдущая», пока не откроется первая страница
+  expected-result: |
+    Каждое нажатие кнопки «Следующая» листает страницы на одну вперед, а кнопки «Предыдущая» — на одну страницу назад. На первой странице отображается только кнопка «Следующая», на последней — только кнопка «Предыдущая»
     
 - summary: |
     Проверка поиска по ключевым словам на английском языке
@@ -90,13 +102,13 @@
 - summary: |
     Проверка работы поиска по категории
   requirement: |
-    Пользователь может выбрать нужную категорию из всех, которые есть в магазине
+    Пользователь может выбрать нужную категорию из всех, которые есть в магазине, и сбросить выбор, нажав на пустую строчку в выпадающем списке
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   steps:
     - Открыть выпадающее меню: Категория
   expected-result: |
-    Появляется выпадающий список со всеми категориями товаров, которые представлены на сайте
+    Появляется выпадающий список со всеми категориями товаров, которые представлены на сайте, также в списке есть пустая строчка для сброса выбора
     
 - summary: |
     Проверка работы поиска по производителям
