--- a/test-cases.yml
+++ b/test-cases.yml
@@ -5,6 +5,8 @@
     При переключенинии языка интерфейс сайта и описание категорий должены поменяться на русский, названия производителей меняться не должны, также меняется иконка флага 
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Language
   steps:
     - Нажать на выпадаюзщий список с надписью Language
     - Выбрать Russian
@@ -17,10 +19,12 @@
     Сайт использует безопаный протокол HTTPS
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Security
   steps:
     - Нажать F12, чтобы открыть инструменты разработчика
     - Перейти во вкладку Security
-    - Нажать кнопку: View sertificate
+    - Нажать кнопку View sertificate
   expected-result: |
     У сайта есть сертификат безопасности
     
@@ -30,6 +34,8 @@
     В карточках отображается вся информация о товаре: название, рейтинг, описание, цена со скидкой и без нее, все картинки подогнаны по размеру и их можно увеличить
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Cards
   steps:
     - открыть несколько товаров со страницы выдачи, из середины и с последней страницы выдачи
   expected-result: |
@@ -41,6 +47,8 @@
     Страницы с товарами можно листать кнопками «Предыдущая» и «Следующая»
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Pages
   steps:
     - Нажимать кнопку «Следующая», до тех пор, пока не откроется последняя страница
     - Нажимать кнопку «Предыдущая», пока не откроется первая страница
@@ -105,8 +113,10 @@
     Пользователь может выбрать нужную категорию из всех, которые есть в магазине, и сбросить выбор, нажав на пустую строчку в выпадающем списке
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Categories
   steps:
-    - Открыть выпадающее меню: Категория
+    - Открыть выпадающее меню Категория
   expected-result: |
     Появляется выпадающий список со всеми категориями товаров, которые представлены на сайте, также в списке есть пустая строчка для сброса выбора
     
@@ -116,6 +126,8 @@
     Пользователь может отфильтровать товары по всем брендам, которые есть в магазине
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Manufacturers
   steps:
     - Поставить галочку напротив производителей Apple, Soft Cotton, YIOSI
   expected-result: |
@@ -127,6 +139,8 @@
     При применении фильтров находятся все товары, которые подходят под эти фильтры
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Categories
   steps:
     - Выбрать категорию
     - Выбрать бренды, подходящие под категории (см выдачу)
@@ -141,6 +155,8 @@
     При выборе категории в фильтре производителей должны остаться только те бренды которые ей соответствуют
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Categories and brands
   steps:
     - выбрать категорию
   expected-result: |
@@ -152,6 +168,8 @@
     Если убрать галочку in_stock, отобразятся товары, которых нет в наличии
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    In_stock
   steps:
     - снять галочку с фильтра in_stock
   expected-result: |
@@ -163,6 +181,8 @@
     После добавления товаров в корзину они должны появиться в ней
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Cart
   steps:
     - добавить товары в корзину
     - перейти в корзину
@@ -175,6 +195,8 @@
     Все товары, добавленные в разных вкладках, должны появиться в корзине
   prerequisites: |
     В двух разных вкладках открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Cart
   steps:
     - добавить товар в корзину в первой вкладке
     - добавить товар в корзину во второй вкладке
@@ -188,10 +210,12 @@
     После добавления товаров в корзину они должны появиться в ней
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Cart
   steps:
     - добавить товары в корзину
     - перейти в корзину
-    - нажать кнопку: продолжить покупки
+    - нажать кнопку «продолжить покупки»
     - добавить другие товары в корзину
     - перейти в корзину
   expected-result: |
@@ -203,6 +227,8 @@
     В корзине осталась только товары, которые не были удалены
   prerequisites: |
     Открыта корзина https://hexlet-products-store.vercel.app/cart, в которую добавлено 3 товара
+  test-data: |
+    Cart
   steps:
     - удалить два товара из корзины
   expected-result: |
@@ -214,8 +240,10 @@
     Из корзины можно удалить все товары
   prerequisites: |
     Открыта корзина https://hexlet-products-store.vercel.app/cart, в которую добавлено 3 товара
+  test-data: |
+    Cart
   steps:
-    - Нажать кнопку: очистить корзину
+    - Нажать кнопку «очистить корзину»
   expected-result: |
     Корзина пуста
     
@@ -225,8 +253,10 @@
     Нельзя оформить пустой заказ
   prerequisites: |
     Открыта корзина https://hexlet-products-store.vercel.app/cart, в которую нет товаров
+  test-data: |
+    Cart  
   steps:
-    - Проверить наличие кнопки: оформить заказ
+    - Проверить наличие кнопки оформить заказ
   expected-result: |
     кнопки нет
 
@@ -239,7 +269,7 @@
   test-data: |
     Телефон +77777777777
   steps:
-    - Нажать кнопку: оформить заказ
+    - Нажать кнопку «Оформить заказ»
     - Ввести номер телефона
   expected-result: |
     Сообщение: заказ успешно оформлен  
@@ -254,9 +284,9 @@
     Телефон +77777777777
     Номер банковской карты 7777777777777
   steps:
-    - Нажать кнопку: оформить заказ
+    - Нажать кнопку «Оформить заказ»
     - Ввести номер телефона
-    - Нажать кнопку: перейти к оплате
+    - Нажать кнопку перейти к оплате
     - Ввести данные банковской карты
   expected-result: |
     Сообщение: заказ успешно оплачен   
@@ -267,10 +297,12 @@
     Оформленный заказ должен отправляться на сервер
   prerequisites: |
     Открыта корзина https://hexlet-products-store.vercel.app/cart, в которую добавлены товары
+  test-data: |
+    Cart
   steps:
     - Нажать F12, чтобы открыть инструменты разработчика
     - Открыть вкладку network
-    - Нажать кнопку: оформить заказ
+    - Нажать кнопку «Оформить заказ»
   expected-result: |
     Статус 200, заказ успешно отправлен на сервер
     
@@ -280,15 +312,17 @@
     Сайт адаптируется к разрешению смартфона, все элементы интерфейса: кнопки, поиск и фильтры адаптируются и остаются функциональными
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Smartphone
   steps:
     - Нажать F12, чтобы открыть инструменты разработчика
     - Нажать кнопку Toggle device toolbar
     - Выбрать имитацию устройства с разрешением экрана 375x667
     - Проверить элементы верстки
     - Открыть карточку товара
-    - Нажать кнопку: добавить в корзину
+    - Нажать кнопку добавить в корзину
     - Перейти в корзину
-    - Нажать кнопку: оформить заказ 
+    - Нажать кнопку «Оформить заказ» 
   expected-result: |
     Все элементы отображаются правильно и не наползают друг на друга, шрифты читаемы, изображения не растягиваются по горизонтали или вертикали, пользователь может оформить заказ
     
@@ -298,15 +332,17 @@
     Сайт адаптируется к разрешению планшета, все элементы интерфейса: кнопки, поиск и фильтры адаптируются и остаются функциональными
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Smartphone
   steps:
     - Нажать F12, чтобы открыть инструменты разработчика
     - Нажать кнопку Toggle device toolbar
     - Выбрать имитацию устройства с разрешением экрана 768x1024
     - Проверить элементы верстки
     - Открыть карточку товара
-    - Нажать кнопку: добавить в корзину
+    - Нажать кнопку добавить в корзину
     - Перейти в корзину
-    - Нажать кнопку: оформить заказ 
+    - Нажать кнопку «Оформить заказ» 
   expected-result: |
     Все элементы отображаются правильно и не наползают друг на друга, шрифты читаемы, изображения не растягиваются по горизонтали или вертикали, пользователь может оформить заказ
 
@@ -316,13 +352,15 @@
     Сайт корректно отображается во всех браузерах, есть возможность сделать заказ
   prerequisites: |
     Установлены браузеры Google Chrome, Firefox, Safari последних версий
+  test-data: |
+    Browsers
   steps:
     - Открыть главную страницу сайта https://hexlet-products-store.vercel.app/ в каждом браузере
     - Положить два товара в корзину
     - Перейти в корзину
-    - Нажать кнопку оформить заказ
+    - Нажать кнопку «Оформить заказ»
   expected-result: |
-    Отображается сообщение: заказ успешно оформлен   
+    Отображается сообщение заказ успешно оформлен   
     
 - summary: |
     Проверка оптимизации и скорости загрузки сайта
@@ -330,10 +368,12 @@
     Сайт должен быстро загружаться и быть доступным
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Optimization
   steps:
     - Нажать F12, чтобы открыть инструменты разработчика
     - Открыть вкладку lighhouse
-    - Нажать кнопку: analize page load
+    - Нажать кнопку analize page load
   expected-result: |
     Параметры Performance, Best Practices и SEO находятся на высоком уровне, в зелёном диапазоне диаграммы
     
@@ -343,6 +383,9 @@
     Сайт должен оставаться доступным и быстро работать
   prerequisites: |
     Зарегистрироваться в сервисе https://loaddy.com/
+   test-data: |
+    Логин 1111
+    Пароль 1111
   steps:
     - Открыть главную страницу сервиса https://loaddy.com/
     - Залогиниться
