--- a/about.yml
+++ b/about.yml
@@ -4,7 +4,7 @@ job: QA Engineer
 level: junior
 email: olya.blondi@gmail.com
 description: |
-  Я хочу уйти из SMM в QA.
+  Junior QA Engineer
 
 skills: 
   - Ручное тестирование
