--- a/test-cases.yml
+++ b/test-cases.yml
@@ -8,7 +8,7 @@
   test-data: |
     Language
   steps:
-    - Нажать на выпадаюзщий список с надписью Language
+    - Нажать на выпадающий список с надписью Language
     - Выбрать Russian
   expected-result: |
     Интерфейс сайта и описания товаров переключились на русский, иконка поменялась с британского флага на российский, названия производителей остались прежними
