--- a/test-cases.yml
+++ b/test-cases.yml
@@ -363,7 +363,7 @@
     Отображается сообщение заказ успешно оформлен   
     
 - summary: |
-    Проверка оптимизации и скорости загрузки сайта
+    Проверка оптимизации и скорости загрузки мобильной версии сайта
   requirement: |
     Сайт должен быстро загружаться и быть доступным
   prerequisites: |
